<resources>
    <string name="app_name">Assignment2</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_given_name">First (given) name</string>
    <string name="family_last_name">Family (last) name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="major">Major</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>

    <string name="major_val">%1s %2s</string>

    <string name="DoctorofPhilosophy">Doctor of Philosophy (Ph.D.)</string>
    <string name="DoctorofEducation">Doctor of Education (Ed.D.)</string>
    <string name="MasterofArts">Master of Arts (MA)</string>
    <string name="MasterofScience">Master of Science (MS)</string>
    <string name="MasterofFineArts">Master of Fine Arts (MFA)</string>
    <string name="ProfessionalMastersDegrees">Professional Master\'s Degrees</string>

    <string name="DoctorofPhilosophy_acr">Ph.D.</string>
    <string name="DoctorofEducation_acr">Ed.D.</string>
    <string name="MasterofArts_acr">MA</string>
    <string name="MasterofScience_acr">MS</string>
    <string name="MasterofFineArts_acr">MFA</string>
    <string name="ProfessionalMastersDegrees_acr">PMD</string>
    <string name="advanced_degrees">Advanced Degrees</string>

    <string-array name="AdvancedDegrees">
        <item>@string/DoctorofPhilosophy</item>
        <item>@string/DoctorofEducation</item>
        <item>@string/MasterofArts</item>
        <item>@string/MasterofScience</item>
        <item>@string/MasterofFineArts</item>
        <item>@string/ProfessionalMastersDegrees</item>
    </string-array>

    <string-array name="DrOfPhilosophy">
        <item>Bioengineering</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Clinical Psychology</item>
        <item>Computational Science</item>
        <item>Ecology</item>
        <item>Education</item>
        <item>Engineering/Bioengineering</item>
        <item>Engineering/Electrical and Computer</item>
        <item>Engineering/Mechanical and Aerospace</item>
        <item>Engineering/Structural</item>
        <item>Evolutionary Biology</item>
        <item>Geography</item>
        <item>Geophysics</item>
        <item>Language and Communicative Disorders</item>
        <item>Mathematics and Science Education</item>
        <item>Public Health</item>
    </string-array>

    <string-array name="DrOfEducation">
        <item>Educational Leadership/Pre K-12</item>
        <item>Educational Leadership/Post Secondary Community College</item>
    </string-array>

    <string-array name="MasterOfArts">
        <item>Anthropology</item>
        <item>Art</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Chicana and Chicano Studies</item>
        <item>Communication</item>
        <item>Speech, Language and Hearing Sciences</item>
        <item>Economics</item>
        <item>Education</item>
        <item>English</item>
        <item>French</item>
        <item>Geography</item>
        <item>History</item>
        <item>Interdisciplinary Studies</item>
        <item>Journalism and Media Studies</item>
        <item>Latin American Studies</item>
        <item>Liberal Arts and Sciences</item>
        <item>Linguistics</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Rhetoric and Writing Studies</item>
        <item>Sociology</item>
        <item>Spanish</item>
        <item>Television, Film and New Media Production</item>
        <item>Theatre Arts</item>
        <item>Women's Studies</item>
    </string-array>

    <string-array name="MasterofScience">
        <item>Accountancy</item>
        <item>Aerospace Engineering</item>
        <item>Applied Mathematics</item>
        <item>Astronomy</item>
        <item>Bioengineering</item>
        <item>Biology</item>
        <item>Bioinformatics and Medical Informatics</item>
        <item>Biomedical Quality Systems</item>
        <item>Business Administration</item>
        <item>Chemistry</item>
        <item>Child Development</item>
        <item>Civil Engineering</item>
        <item>Computational Science</item>
        <item>Computer Science</item>
        <item>Counseling</item>
        <item>Criminal Justice and Criminology</item>
        <item>Electrical Engineering</item>
        <item>Exercise Physiology</item>
        <item>Geography</item>
        <item>Geological Sciences</item>
        <item>Gerontology</item>
        <item>Homeland Security</item>
        <item>Hospitality and Tourism Management</item>
        <item>Information Systems</item>
        <item>Interdisciplinary Studies</item>
        <item>Kinesiology</item>
        <item>Mechanical Engineering</item>
        <item>Medical Physics</item>
        <item>Microbiology</item>
        <item>Nursing</item>
        <item>Nutritional Sciences</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Public Health</item>
        <item>Regulatory Affairs</item>
        <item>Rehabilitation Counseling</item>
        <item>Statistics</item>
    </string-array>
    <string-array name="MasterofFineArts">
        <item>Art</item>
        <item>Creative Writing</item>
        <item>Design and Technical Theatre</item>
        <item>Musical Theatre</item>
        <item>Theatre Arts</item>
    </string-array>

    <string-array name="ProfessionalMastersDegrees">
        <item>Master of Business Administration (MBA)</item>
        <item>Master of City Planning (MCP)</item>
        <item>Master of Engineering (ME)</item>
        <item>Master of Music (MM)</item>
        <item>Master of Public Administration (MPA)</item>
        <item>Master of Public Health (MPH)</item>
        <item>Master of Social Works (MSW)</item>
    </string-array>

</resources>