<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/personal_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/first_given_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/family_last_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMajor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:background="?attr/editTextBackground"
        android:gravity="center_vertical|start"
        android:hint="@string/major"
        android:paddingStart="5dp"
        android:textAppearance="@style/Widget.AppCompat.EditText"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save"
        android:textAppearance="@style/Widget.AppCompat.EditText"
        android:textColor="@android:color/white"
        android:textSize="19sp" />

</LinearLayout>
