<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/advanced_degrees"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21sp"></TextView>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:layout_below="@+id/tvTitle"
        android:layout_marginBottom="10dp"></ListView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:visibility="gone"
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/clear"
            android:textAppearance="@style/Widget.AppCompat.EditText"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/done"
            android:textAppearance="@style/Widget.AppCompat.EditText"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </LinearLayout>

</RelativeLayout>
